--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,142 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+
+
+
+a{
+	text-decoration: none;
+}
+.container{
+    padding: 0 15px;
+    margin: 0 auto;
+}
+header {
+	height: 50px;
+	width: 100%;
+    background-color: rgba(34, 49, 52, 0.9);
+    position :fixed;
+}
+input{
+	margin-top: 7px;
+	margin-left: 10px;
+	line-height: 30px;
+	float: left;
+	width: 400px;
+}
+.header-left{
+	float: left;
+}
+.header-left a{
+	line-height: 50px;
+	color: white;
+	padding: 0 25px;
+	font-size: 25px;
+}
+.pilihan a{
+	display: inline-block;
+	color: white;
+	float: right;
+	line-height: 50px;
+	padding: 0 25px; 
+}
+.pilihan a:hover{
+	background-color: rgba(255, 255, 255, 0.5);
+}
+.top-wrapper{
+	padding: 180px 0 100px 0;
+	background-image: url(fotolaptop.jpg);
+	background-color: grey;
+	background-size: cover;
+	text-align: center;
+	height: 300px;
+}
+.top-wrapper h1{
+	font-size: 40px;
+	margin-bottom: 5px;
+	opacity: 0.7;
+}
+.top-wrapper p{
+	font-size: 20px;
+	opacity: 0.7;
+}
+.top-wrapper p a{
+	color: #1E90FF;
+}
+.top-wrapper p a:hover{
+	background-color: white;
+}
+.link-wrapper a{
+	margin-top: 10px;
+	display: inline-block;
+	color: white;
+	line-height: 20px;
+	font-size: 20px;
+	margin-right: 10px;
+	text-align: center;
+	margin-right: 10px;
+}
+.btn:hover{
+	opacity: 1;
+}
+.instagram{
+	background-color: salmon;
+	padding: 10px 20px 10px 20px;
+	opacity: 0.8;
+}
+.facebook{
+	background-color: #3b5998;
+    padding: 10px 20px 10px 20px;
+    opacity: 0.8;
+}
+.twitter{
+	background-color: #55acee;
+	padding: 10px 20px 10px 20px;
+    opacity: 0.8;
+}
+.discord{
+	background-color: mediumblue;
+	padding: 10px 20px 10px 20px;
+    opacity: 0.7;
+}
