--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,3 +140,34 @@ input{
 	padding: 10px 20px 10px 20px;
     opacity: 0.7;
 }
+footer{
+	padding-top:30px;
+	padding-bottom:20px;
+	padding-right: 30px;
+	display:block;
+	background-color:#556B2F;
+	height: 2%;
+
+}
+footer img{
+	width: 200px;
+	float:left;
+	padding:30px;
+
+}
+footer p{
+	font-size: 12px;
+	color: #80ffff;
+}
+
+footer li{
+	text-align : right;
+	color: #00FFFF;
+	padding-bottom:10px;
+	
+
+	
+}
+footer a{
+	color:#FFFAF0;
+}
